fix(button-group): fix z-indexes

--- a/src/components/button-group/themes/shared/button/button.common.scss
+++ b/src/components/button-group/themes/shared/button/button.common.scss
@@ -52,7 +52,7 @@ $theme: $material;
 :host([part='toggle focused']),
 :host(:focus-within) {
     [part~='toggle'] {
-        z-index: 1;
+        z-index: 2;
         color: var-get($theme, 'item-focused-text-color');
         background: var-get($theme, 'item-focused-background');
         border-color: var-get($theme, 'item-focused-border-color');
@@ -89,7 +89,6 @@ $theme: $material;
 :host(:active),
 [part~='toggle']:active {
     [part~='toggle'] {
-        z-index: 2;
         background: var-get($theme, 'item-active-background');
         border-color: var-get($theme, 'item-active-border-color');
         color: var-get($theme, 'item-hover-text-color');
@@ -102,7 +101,6 @@ $theme: $material;
 
 :host([selected]) {
     [part~='toggle'] {
-        z-index: 3;
         color: var-get($theme, 'item-selected-text-color');
         background: var-get($theme, 'item-selected-background');
         border-color: var-get($theme, 'item-selected-border-color');
@@ -128,6 +126,7 @@ $theme: $material;
 :host([selected][part='toggle focused']),
 :host([selected]:focus-within) {
     [part~='toggle'] {
+        z-index: 2;
         color: var-get($theme, 'item-selected-text-color');
         background: var-get($theme, 'item-selected-focus-background');
         border-color: var-get($theme, 'item-selected-border-color');
